[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Egypt/garlic.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level4/Garlic.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 10 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[node name="Garlic" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -21.0
margin_top = -50.0
margin_right = 19.0
margin_bottom = -34.0
custom_styles/normal = SubResource( 2 )
text = "'e'"
align = 1
valign = 1

[connection signal="area_entered" from="." to="." method="_on_Garlic_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Garlic_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Garlic_body_exited"]
